Changelog 1.0.0.3
-----------------
[NO-TICKET] Changed the fullscreen info key from "enter" to "info-key"


Changelog 1.0.0.2
-----------------
[NO-TICKET] MediaPlayer: changed the handling of the doubleclick and mouse move in fullscreen mode
[NO-TICKET] ImageBrowser: changed the handling of the doubleclick and mouse move in fullscreen mode


Changelog 1.0.0.1
-----------------
[SA-00527] SallyAPI: small rating control - view only
[SA-00523] MediaPlayer: add current playing to the screensaver overlay
[SA-00528] Sally Tools: delete not longer used files from the installation directory
[SA-00530] Sally Tools: the text in the Tool windows is not readable when a high DPI size is used
[SA-00531] MediaPlayer: folders which are copied are sometimes not included in the DB
[SA-00533] MediaPlayer: show info, if the playlist is empty and the user tries to start it from the screensaver mode
[SA-00534] SallyAPI: change the CCheckbox render behavior
[SA-00535] SallyAPI: change the CRadioButton render behavior
[SA-00536] Sally: check crash on sally exit
[NO-TICKET] SallyAPI: added OpenURL to NetworkHelper
[NO-TICKET] MediaPlayer: changed the calculation of the time slider
[SA-00464] Sally: update to vlc 2.0
[NO-TICKET] SallyAPI: hide / show the CScreensaverControlLabel if empty / filled
[NO-TICKET] Sally: case insensitive sorting for the menu application selector
[NO-TICKET] ImageBrowser: some files are not added to the database
[SA-00487] network connection is not working correct
[NO-TICKET] MediaPlayer: fixed the settings save path
[NO-TICKET] many not documented improvements


Changelog 0.8.1.3
-----------------
[SA-00520] Sally: let the working control rotate around Z not Y
[SA-00493] Sally: shutdown /i statt /s
[SA-00521] MediaPlayer: add shuffle on / off to the screensaver overlay
[SA-00522] Sally: add clock to the screensaver overlay


Changelog 0.8.1.2
-----------------
[NO-TICKET] hide speak input / output controls in settings